--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 body{
-    background-color: #303030;
+    background-color: #000000;
+    background-image: linear-gradient(0deg, #000000 0%, #be0004 100%);
 }
